fixed icon overflow and icon displays correctly

--- a/style.css
+++ b/style.css
@@ -50,10 +50,10 @@ button {
 }
 
 .info {
-    grid-column-start: 2;
+    /* grid-column-start: 2;
     grid-column-end: 7;
     grid-row-start: 2;
-    grid-row-end: 4;
+    grid-row-end: 4; */
 
     border-style: solid;
     border-color: black;
